2014-09-08  19  Fixed BMViewDlg bugs, initial implementation of FileViewHandler's/FileViewerWidget
                to preview an HTML file.
2014-09-10  19  Created simple Image and Text preview handlers, BMViewDlg files context menu.
2014-09-11  19  Preview enhancements. Support sandboxed file opening everywhere.
2014-09-13  18  Decision on ExecuteShellEx opening (we don't do it), delete sandbox on start-up
2014-09-15  22  Fixed both htm and mht file vieweing, HTMLViewer has frame, Initial OpenWithDialog
2014-09-16  25  OpenWidthDlg: list apps with beautiful ItemDelegate, filtering and getting EXE info
2014-09-17  25  App list browsing, adding systemApps to database, bugfixes.
2014-09-18  27  Coding improvements
2014-09-21  32  Default system application and Preferred application implemented, OpenWithDialog 
                has defapp & sandboxing support, OpenWith works initially.
2014-09-22  30  Associated applications and sorted Open With menu implemented.
2014-09-23  30  OpenWithDlg AppList sorting, Rename and unassociate implemented, bugfixes.
2014-09-24  27  OpenWithDlg AppList Remove function, bugfixes, BMEditDialog Preview
2014-09-28  41  Got hands dirty to unify the file archive management.
2014-09-29  41  File management unification more tries and almost complete.
2014-10-01  34  File archive management unification done.
2014-10-07  30  Use relative paths for FileArchive paths, bugfixes and improvements.
2014-10-09  29  Enable sorting, correct save selection behaviour for sorting.
2014-10-13  30  Can sort by both the headers and by BID.
2014-10-14  32  Separated the bookmarks table view and implemented linking tables and UI.
2014-10-15  34  Bookmark Linking support in BMEditDlg complete and working. Added QuickBMSelDlg.
2014-10-26  39  BMViewDlg shows linked bookmarks
2014-10-27  40  Introduced BookmarkExtraInfo tables and UI and initial code.
2014-10-29  42  Bookmark Extra Info adding, viewing, editing, etc all done.